EDA/Prácticas/eda/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Applications/BlueJ.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/Applications/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Applications/BlueJ.app/Contents/Resources/Java/junit-4.8.2.jar:/Users/marcosesteve/Documents/UPV/EDA/Prácticas/eda/aplicaciones/indices/testIndBib.jar:/Users/marcosesteve/Documents/UPV/EDA/Prácticas/eda/librerias/util/graphLib.jar:/Users/marcosesteve/Documents/UPV/EDA/Prácticas/eda:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-core.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-device.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-gpio-extension.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-service.jar:/Users/marcosesteve/Documents/UPV/EDA/Prácticas/eda
-d
/Users/marcosesteve/Documents/UPV/EDA/Prácticas/eda/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/Applications/BlueJ.app/Contents/Resources/Java/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/Users/marcosesteve/Documents/UPV/EDA/Prácticas/eda/librerias/estructurasDeDatos/jerarquicos/NodoABB.java
<---- end of javadoc command ---->
Loading source file /Users/marcosesteve/Documents/UPV/EDA/Prácticas/eda/librerias/estructurasDeDatos/jerarquicos/NodoABB.java...
Constructing Javadoc information...
Standard Doclet version 1.8.0_66
Building tree for all the packages and classes...
Generating /Users/marcosesteve/Documents/UPV/EDA/Prácticas/eda/doc/librerias/estructurasDeDatos/jerarquicos/NodoABB.html...
Generating /Users/marcosesteve/Documents/UPV/EDA/Prácticas/eda/doc/librerias/estructurasDeDatos/jerarquicos/package-frame.html...
Generating /Users/marcosesteve/Documents/UPV/EDA/Prácticas/eda/doc/librerias/estructurasDeDatos/jerarquicos/package-summary.html...
Generating /Users/marcosesteve/Documents/UPV/EDA/Prácticas/eda/doc/constant-values.html...
/Users/marcosesteve/Documents/UPV/EDA/Prácticas/eda/librerias/estructurasDeDatos/jerarquicos/ABB.java:5: error: cannot find symbol
import librerias.estructurasDeDatos.modelos.Cola;
                                           ^
  symbol:   class Cola
  location: package librerias.estructurasDeDatos.modelos
/Users/marcosesteve/Documents/UPV/EDA/Prácticas/eda/librerias/estructurasDeDatos/jerarquicos/ABB.java:6: error: cannot find symbol
import librerias.estructurasDeDatos.lineales.ArrayCola;
                                            ^
  symbol:   class ArrayCola
  location: package librerias.estructurasDeDatos.lineales
Building index for all the packages and classes...
Building index for all classes...
Generating /Users/marcosesteve/Documents/UPV/EDA/Prácticas/eda/doc/allclasses-frame.html...
Generating /Users/marcosesteve/Documents/UPV/EDA/Prácticas/eda/doc/allclasses-noframe.html...
Generating /Users/marcosesteve/Documents/UPV/EDA/Prácticas/eda/doc/index.html...
Generating /Users/marcosesteve/Documents/UPV/EDA/Prácticas/eda/doc/stylesheet.css...
2 errors
